// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextareaField /> Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":r0:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
    </div>
    <textarea
      aria-describedby=""
      class="textarea"
      id=":r0:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
  </div>
</div>
`;

exports[`<TextareaField /> WhenDefaultStatus story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":rf:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rh:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rh: :rg:"
      class="textarea"
      id=":rf:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rg:"
      >
        <span
          class="text text--body-sm"
        >
          Text should be at least 100 characters
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenDisabled story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline textarea-field__overline--disabled"
    >
      <label
        class="label label--md textarea-field__label--disabled"
        for=":r9:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel textarea-field__label--disabled"
      >
        <span
          class="text text--body-sm"
          id=":rb:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rb: :ra:"
      aria-disabled="true"
      class="textarea textarea--disabled"
      disabled=""
      id=":r9:"
      placeholder="Enter long-form text here"
      rows="2"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        aria-disabled="true"
        class="field-note field-note--disabled textarea-field__field-note"
        id=":ra:"
      >
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenError story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":ri:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rk:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rk: :rj:"
      class="textarea error"
      id=":ri:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--error textarea-field__field-note"
        id=":rj:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          Text should be at least 100 characters
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenNoDefaultValue story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":r3:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r5:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r5:"
      class="textarea"
      id=":r3:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    />
  </div>
</div>
`;

exports[`<TextareaField /> WhenOptional story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":rr:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <span
        class="text text--body-sm textarea-field__hint"
      >
        (Optional)
      </span>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rt:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rt: :rs:"
      class="textarea"
      id=":rr:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rs:"
      >
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenReadOnly story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":rc:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":re:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":re: :rd:"
      class="textarea textarea-field__textarea--read-only"
      id=":rc:"
      placeholder="Enter long-form text here"
      readonly=""
      rows="2"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rd:"
      >
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenRequired story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":ro:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <span
        class="text text--body-sm textarea-field__hint"
      >
        (Required)
      </span>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rq:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rq: :rp:"
      class="textarea"
      id=":ro:"
      placeholder="Enter long-form text here"
      required=""
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rp:"
      >
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenUsingValue story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":r6:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r8:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r8:"
      class="textarea"
      id=":r6:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
  </div>
</div>
`;

exports[`<TextareaField /> WhenWarning story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":rl:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rn:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rn: :rm:"
      class="textarea warning"
      id=":rl:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--warning textarea-field__field-note"
        id=":rm:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            warning
          </title>
          <path
            d="M4.12573 19.9999C3.97006 19.9999 3.83231 19.9629 3.71248 19.8889C3.59248 19.8149 3.49923 19.7173 3.43273 19.5961C3.36006 19.4768 3.32006 19.3476 3.31273 19.2086C3.30556 19.0695 3.34448 18.9292 3.42948 18.7879L11.3012 5.21187C11.3862 5.07053 11.4887 4.96778 11.6087 4.90362C11.7286 4.83962 11.859 4.80762 12 4.80762C12.141 4.80762 12.2714 4.83962 12.3912 4.90362C12.5112 4.96778 12.6137 5.07053 12.6987 5.21187L20.5705 18.7879C20.6555 18.9292 20.6944 19.0695 20.6872 19.2086C20.6799 19.3476 20.6399 19.4768 20.5672 19.5961C20.5007 19.7173 20.4075 19.8149 20.2875 19.8889C20.1676 19.9629 20.0299 19.9999 19.8742 19.9999H4.12573ZM12 17.6154C12.1743 17.6154 12.3205 17.5564 12.4385 17.4384C12.5565 17.3204 12.6155 17.1742 12.6155 16.9999C12.6155 16.8255 12.5565 16.6794 12.4385 16.5614C12.3205 16.4434 12.1743 16.3844 12 16.3844C11.8256 16.3844 11.6795 16.4434 11.5615 16.5614C11.4435 16.6794 11.3845 16.8255 11.3845 16.9999C11.3845 17.1742 11.4435 17.3204 11.5615 17.4384C11.6795 17.5564 11.8256 17.6154 12 17.6154ZM12.0007 15.3844C12.1426 15.3844 12.2612 15.3365 12.3567 15.2406C12.4522 15.1448 12.5 15.026 12.5 14.8844V10.8844C12.5 10.7427 12.452 10.624 12.356 10.5281C12.26 10.4323 12.1411 10.3844 11.9992 10.3844C11.8574 10.3844 11.7387 10.4323 11.6432 10.5281C11.5477 10.624 11.5 10.7427 11.5 10.8844V14.8844C11.5 15.026 11.548 15.1448 11.644 15.2406C11.74 15.3365 11.8589 15.3844 12.0007 15.3844Z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          Text should be at least 100 characters
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithADifferentSize story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":ru:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r10:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r10: :rv:"
      class="textarea"
      id=":ru:"
      placeholder="Enter long-form text here"
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rv:"
      >
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithAMaxLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":r11:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <p
        class="text text--body-sm textarea-field__character-counter"
      >
        <span
          class="textarea-field--invalid-length"
        >
          202
        </span>
         
        / 
        144
      </p>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r13:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r13: :r12:"
      class="textarea error"
      id=":r11:"
      maxlength="144"
      placeholder="Enter long-form text here"
      required=""
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--error textarea-field__field-note"
        id=":r12:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithARecommendedLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":r14:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <p
        class="text text--body-sm textarea-field__character-counter"
      >
        <span
          class="textarea-field--invalid-length"
        >
          202
        </span>
         
        / 
        144
      </p>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r16:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r16: :r15:"
      class="textarea error"
      id=":r14:"
      placeholder="Enter long-form text here"
      required=""
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--error textarea-field__field-note"
        id=":r15:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithBothRecommendedAndMaxLengths story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":r17:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <p
        class="text text--body-sm textarea-field__character-counter"
      >
        <span
          class="textarea-field--invalid-length"
        >
          202
        </span>
         
        / 
        144
      </p>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r19:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r19: :r18:"
      class="textarea error"
      id=":r17:"
      maxlength="256"
      placeholder="Enter long-form text here"
      required=""
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--error textarea-field__field-note"
        id=":r18:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;
